# db-changes-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  db_ddl.sql
.github/workflows/: rust.yml
src/: api.rs  main.rs  versions.rs
src/api/: cache.rs  changes.rs  versions.rs
test_data/: test.db
test_data/test_app/: change
