[package]
name = "db-changes-server"
version = "0.1.0"
authors = ["S@P <lorenzotorracchi@mail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
argh = "0.1.12"
dirs = "5.0.1"
rusqlite = "0.32.1"
mockall = "0.13.0"
